<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.ourkadai</groupId>
	<artifactId>sp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name/>
	<description/>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>7.0.6</version>
        </dependency>
		<!-- Spring Boot Starter JDBC -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<!-- Oracle JDBC Driver
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>21.9.0.0</version>
		</dependency> -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc11</artifactId>
			<version>23.3.0.23.09</version>
		</dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- Create custom JRE + tar.gz -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>

				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>

						<configuration>
							<target>

								<!-- Create custom JRE -->
								<exec executable="jlink">
									<arg value="--add-modules"/>
									<arg value="java.base,java.desktop,java.logging,java.sql,java.naming,java.management,java.instrument,java.xml,java.security.jgss,jdk.unsupported"/>
									<arg value="--output"/>
									<arg value="${project.build.directory}/runtime"/>
									<arg value="--strip-debug"/>
									<arg value="--compress=2"/>
									<arg value="--no-header-files"/>
									<arg value="--no-man-pages"/>
								</exec>

								<!-- Create bundle folder -->
								<mkdir dir="${project.build.directory}/bundle"/>

								<copy file="${project.build.directory}/${project.build.finalName}.jar"
									  tofile="${project.build.directory}/bundle/app.jar"/>

								<copy todir="${project.build.directory}/bundle/jre">
									<fileset dir="${project.build.directory}/runtime"/>
								</copy>

								<!-- Create tar.gz -->
								<tar destfile="${project.build.directory}/hello-bundle.tar.gz"
									 compression="gzip">
									<tarfileset dir="${project.build.directory}/bundle"
												prefix="myapp"/>
								</tar>

							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>
	</build>

</project>
